The model of KNNQuantifier can't be encapsulated into a Pipeline, because it lacks the predict() method. So for the KNNRecommender, there is a Pipeline for data_transformation and the Model as separated entities. In the RegressorRecommender, the model is integrated into the Pipeline (they are one and the same). Fixed bugs that the change to the Pipeline cause, still needs to fix the save_meta_table and load_fit_meta_table methods.

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "recommender = KNNRecommender(supervised=True, _load=False)\n",
     "\n",
     "recommender.fit(full_set_path=\"./data/full_set/\", train_set_path=\"./data/train_set/\", test_set_path=\"./data/test_set/\")\n",
-    "# recommender.fit(full_set_path=\"./data/train_set/\", train_set_path=\"./data/train_set/\", test_set_path=\"./data/test_set/\")\n",
+    "# # recommender.fit(full_set_path=\"./data/train_set/\", train_set_path=\"./data/train_set/\", test_set_path=\"./data/test_set/\")\n",
     "recommender.save_meta_table(\"./recommender_data/knn_meta_table.h5\")\n",
     "recommender.persist_model(\"./recommender_data/KNNRecommender.joblib\")"
    ]
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,9 +62,9 @@
     "# the fitted model persisted on the previous step (with _load=True by default).\n",
     "recommender = KNNRecommender()\n",
     "\n",
-    "# df = pd.read_csv(\"./data/datasets/winetype.csv\")\n",
-    "# X = df.drop(columns=[\"class\"]).values\n",
-    "# y = df[\"class\"].values\n",
+    "df = pd.read_csv(\"./data/datasets/winetype.csv\")\n",
+    "X = df.drop(columns=[\"class\"]).values\n",
+    "y = df[\"class\"].values\n",
     "\n",
     "# Returns two tuples: (quantifiers ranking), (quantifiers weight by their ARR).\n",
     "# First quantifier is best, second quantifier is second best, and so on.\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,30 +116,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from regression_recommender import RegressionRecommender\n",
-    "# import pandas as pd\n",
+    "from regression_recommender import RegressionRecommender\n",
+    "import pandas as pd\n",
     "\n",
-    "# # When a RegressionRecommender model is instantiated, it automatically loads\n",
-    "# # the fitted model persisted on the previous step (with _load=True by default).\n",
-    "# recommender = RegressionRecommender()\n",
+    "# When a RegressionRecommender model is instantiated, it automatically loads\n",
+    "# the fitted model persisted on the previous step (with _load=True by default).\n",
+    "recommender = RegressionRecommender()\n",
     "\n",
-    "# df = pd.read_csv(\"./data/datasets/winetype.csv\")\n",
-    "# X = df.drop(columns=[\"class\"]).values\n",
-    "# y = df[\"class\"].values\n",
+    "df = pd.read_csv(\"./data/datasets/winetype.csv\")\n",
+    "X = df.drop(columns=[\"class\"]).values\n",
+    "y = df[\"class\"].values\n",
     "\n",
-    "# # Returns two tuples: (quantifiers ranking), (quantifiers weight by their MAE).\n",
-    "# # First quantifier is best, second quantifier is second best, and so on.\n",
-    "# ranking, weights = recommender.recommend(X, y)\n",
+    "# Returns two tuples: (quantifiers ranking), (quantifiers weight by their MAE).\n",
+    "# First quantifier is best, second quantifier is second best, and so on.\n",
+    "ranking, weights = recommender.recommend(X, y)\n",
     "\n",
-    "# print(f\"Top 1: {ranking[0]} with Weight: {weights[0]}\")\n",
-    "# print(f\"Top 2: {ranking[1]} with Weight: {weights[1]}\")\n",
-    "# print(f\"Top 3: {ranking[2]} with Weight: {weights[2]}\")\n",
-    "# print(f\"Full ranking: {ranking}\")\n",
-    "# print(f\"Sum of weights: {sum(weights)}\")"
+    "print(f\"Top 1: {ranking[0]} with Weight: {weights[0]}\")\n",
+    "print(f\"Top 2: {ranking[1]} with Weight: {weights[1]}\")\n",
+    "print(f\"Top 3: {ranking[2]} with Weight: {weights[2]}\")\n",
+    "print(f\"Full ranking: {ranking}\")\n",
+    "print(f\"Sum of weights: {sum(weights)}\")"
    ]
   },
   {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,6 +269,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from knn_recommender import KNNRecommender\n",
+    "\n",
+    "knn = KNNRecommender()\n",
+    "knn.save_meta_table(\"./recommender_data/knn_meta_table.h5\")\n",
+    "\n",
+    "knn.transform_pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> \u001b[1;32mc:\\guizo\\quantifier_recommender\\knn_recommender.py\u001b[0m(162)\u001b[0;36mload_fit_meta_table\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m    160 \u001b[1;33m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[1;32m    161 \u001b[1;33m        \u001b[1;32mimport\u001b[0m \u001b[0mpdb\u001b[0m\u001b[1;33m;\u001b[0m \u001b[0mpdb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[1;32m--> 162 \u001b[1;33m        \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_scaler_method\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"minmax\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[1;32m    163 \u001b[1;33m            \u001b[0mscaler\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMinMaxScaler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[1;32m    164 \u001b[1;33m        \u001b[1;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_scaler_method\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"zscore\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
+      "0    NaN\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "from regression_recommender import RegressionRecommender\n",
+    "from knn_recommender import KNNRecommender\n",
+    "\n",
+    "# reg = RegressionRecommender(supervised=True, _load=False)\n",
+    "knn = KNNRecommender(supervised=True, _load=False)\n",
+    "\n",
+    "# reg.load_fit_meta_table(\"./recommender_data/regression_meta_table.h5\")\n",
+    "knn.load_fit_meta_table(\"./recommender_data/knn_meta_table.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn.transform_pipeline"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -277,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,214 +359,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>quantifier</th>\n",
-       "      <th>dataset</th>\n",
-       "      <th>sample_size</th>\n",
-       "      <th>sampling_seed</th>\n",
-       "      <th>iteration</th>\n",
-       "      <th>alpha</th>\n",
-       "      <th>pred_prev</th>\n",
-       "      <th>abs_error</th>\n",
-       "      <th>run_time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>(KNN)Top-1</td>\n",
-       "      <td>1043_ada_agnostic</td>\n",
-       "      <td>100</td>\n",
-       "      <td>623</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.061650</td>\n",
-       "      <td>0.061650</td>\n",
-       "      <td>0.058840</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>(KNN)Top-1</td>\n",
-       "      <td>1043_ada_agnostic</td>\n",
-       "      <td>100</td>\n",
-       "      <td>243</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.037188</td>\n",
-       "      <td>0.037188</td>\n",
-       "      <td>0.047052</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>(KNN)Top-1</td>\n",
-       "      <td>1043_ada_agnostic</td>\n",
-       "      <td>100</td>\n",
-       "      <td>18</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.104647</td>\n",
-       "      <td>0.104647</td>\n",
-       "      <td>0.046842</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>(KNN)Top-1</td>\n",
-       "      <td>1043_ada_agnostic</td>\n",
-       "      <td>100</td>\n",
-       "      <td>549</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000045</td>\n",
-       "      <td>0.000045</td>\n",
-       "      <td>0.047015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>(KNN)Top-1</td>\n",
-       "      <td>1043_ada_agnostic</td>\n",
-       "      <td>100</td>\n",
-       "      <td>447</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.055687</td>\n",
-       "      <td>0.055687</td>\n",
-       "      <td>0.047509</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>439995</th>\n",
-       "      <td>(KNN)Top-9+W</td>\n",
-       "      <td>winetype</td>\n",
-       "      <td>100</td>\n",
-       "      <td>554</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.999366</td>\n",
-       "      <td>0.000634</td>\n",
-       "      <td>0.406421</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>439996</th>\n",
-       "      <td>(KNN)Top-9+W</td>\n",
-       "      <td>winetype</td>\n",
-       "      <td>100</td>\n",
-       "      <td>379</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.999436</td>\n",
-       "      <td>0.000564</td>\n",
-       "      <td>0.404943</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>439997</th>\n",
-       "      <td>(KNN)Top-9+W</td>\n",
-       "      <td>winetype</td>\n",
-       "      <td>100</td>\n",
-       "      <td>348</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.998610</td>\n",
-       "      <td>0.001390</td>\n",
-       "      <td>0.404237</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>439998</th>\n",
-       "      <td>(KNN)Top-9+W</td>\n",
-       "      <td>winetype</td>\n",
-       "      <td>100</td>\n",
-       "      <td>840</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.994586</td>\n",
-       "      <td>0.005414</td>\n",
-       "      <td>0.402591</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>439999</th>\n",
-       "      <td>(KNN)Top-9+W</td>\n",
-       "      <td>winetype</td>\n",
-       "      <td>100</td>\n",
-       "      <td>114</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.990503</td>\n",
-       "      <td>0.009497</td>\n",
-       "      <td>0.403762</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>440000 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          quantifier            dataset  sample_size  sampling_seed  \\\n",
-       "0         (KNN)Top-1  1043_ada_agnostic          100            623   \n",
-       "1         (KNN)Top-1  1043_ada_agnostic          100            243   \n",
-       "2         (KNN)Top-1  1043_ada_agnostic          100             18   \n",
-       "3         (KNN)Top-1  1043_ada_agnostic          100            549   \n",
-       "4         (KNN)Top-1  1043_ada_agnostic          100            447   \n",
-       "...              ...                ...          ...            ...   \n",
-       "439995  (KNN)Top-9+W           winetype          100            554   \n",
-       "439996  (KNN)Top-9+W           winetype          100            379   \n",
-       "439997  (KNN)Top-9+W           winetype          100            348   \n",
-       "439998  (KNN)Top-9+W           winetype          100            840   \n",
-       "439999  (KNN)Top-9+W           winetype          100            114   \n",
-       "\n",
-       "        iteration  alpha  pred_prev  abs_error  run_time  \n",
-       "0               1    0.0   0.061650   0.061650  0.058840  \n",
-       "1               2    0.0   0.037188   0.037188  0.047052  \n",
-       "2               3    0.0   0.104647   0.104647  0.046842  \n",
-       "3               4    0.0   0.000045   0.000045  0.047015  \n",
-       "4               5    0.0   0.055687   0.055687  0.047509  \n",
-       "...           ...    ...        ...        ...       ...  \n",
-       "439995          6    1.0   0.999366   0.000634  0.406421  \n",
-       "439996          7    1.0   0.999436   0.000564  0.404943  \n",
-       "439997          8    1.0   0.998610   0.001390  0.404237  \n",
-       "439998          9    1.0   0.994586   0.005414  0.402591  \n",
-       "439999         10    1.0   0.990503   0.009497  0.403762  \n",
-       "\n",
-       "[440000 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ensemble_quantifier import EnsembleQuantifier\n",
     "\n",
@@ -520,55 +370,6 @@
     "ensemble_qtf = EnsembleQuantifier()\n",
     "ensemble_qtf.evaluation(\"regression\", reg_recommender_eval, reg_quantifiers_eval, \"./plot_data/reg_ensemble_quantifier_evaluation_table.csv\")\n",
     "ensemble_qtf.evaluation(\"knn\", knn_recommender_eval, knn_quantifiers_eval, \"./plot_data/knn_ensemble_quantifier_evaluation_table.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> \u001b[1;32mc:\\users\\coenl\\appdata\\local\\temp\\ipykernel_1168\\3359174058.py\u001b[0m(11)\u001b[0;36mvariance_threshold\u001b[1;34m()\u001b[0m\n",
-      "\n",
-      "array([  0,   1,   2,   3,   4,   5,   6,  10,  11,  12,  13,  14,  15,\n",
-      "        16,  17,  18,  19,  20,  21,  23,  24,  25,  26,  27,  28,  29,\n",
-      "        30,  31,  32,  33,  34,  35,  36,  37,  38,  39,  40,  41,  42,\n",
-      "        44,  46,  47,  48,  49,  58,  59,  60,  61,  62,  63,  64,  65,\n",
-      "        66,  67,  68,  69,  70,  73,  75,  76,  77,  78,  79,  81,  82,\n",
-      "        84,  85,  92,  93,  94,  95,  96,  97,  98,  99, 100, 101, 102,\n",
-      "       103, 106, 107, 109, 110])\n"
-     ]
-    }
-   ],
-   "source": [
-    "from regression_recommender import RegressionRecommender\n",
-    "from knn_recommender import KNNRecommender\n",
-    "from sklearn.feature_selection import VarianceThreshold\n",
-    "import pandas as pd\n",
-    "\n",
-    "def variance_threshold(X: pd.DataFrame):\n",
-    "    selector = VarianceThreshold()\n",
-    "    _ = selector.fit_transform(X)\n",
-    "    support = selector.get_support(indices=True)\n",
-    "    import pdb; pdb.set_trace()\n",
-    "    reduced_df = X.iloc[:, support]\n",
-    "    return reduced_df\n",
-    "\n",
-    "knn = KNNRecommender()\n",
-    "reg = RegressionRecommender()\n",
-    "\n",
-    "mte = knn.meta_features_table\n",
-    "umte = knn._unscaled_meta_features_table\n",
-    "\n",
-    "mte = variance_threshold(mte)\n",
-    "umte = umte[mte.columns]\n",
-    "\n",
-    "# knn.meta_features_table = variance_threshold(knn.meta_features_table)\n",
-    "\n",
-    "# knn._unscaled_meta_features_table = knn._unscaled_meta_features_table[knn.meta_features_table.columns]"
    ]
   }
  ],
