Organized QuantifierRecommender into a python module (qtfrecommender). Overhauled the relationship between the Recommenders and the BaseRecommender class. Now, BaseRecommender does most of the work, calling the specific fit methods of each recommender after. Reduced alot of repetetive code and code from KNN and Regression Recommenders.

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -20,14 +20,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from knn_recommender import KNNRecommender\n",
+    "from qtfrecommender import KNNRecommender\n",
     "\n",
-    "recommender = KNNRecommender(supervised=True, _load=False)\n",
+    "recommender = KNNRecommender(supervised=True, load_default=False)\n",
     "\n",
     "recommender.fit(full_set_path=\"./data/full_set/\", train_set_path=\"./data/train_set/\", test_set_path=\"./data/test_set/\")\n",
     "# # recommender.fit(full_set_path=\"./data/train_set/\", train_set_path=\"./data/train_set/\", test_set_path=\"./data/test_set/\")\n",
-    "recommender.save_meta_table(\"./recommender_data/knn_meta_table.h5\")\n",
-    "recommender.persist_model(\"./recommender_data/KNNRecommender.joblib\")"
+    "recommender.save_meta_table(\"./qtfrecommender/methods/data/knn_meta_table.h5\")\n",
+    "recommender.persist_model(\"./qtfrecommender/methods/data/KNNRecommender.joblib\")"
    ]
   },
   {
@@ -43,19 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.datasets import make_classification\n",
-    "\n",
-    "# Generate a binary classification dataset\n",
-    "X, y = make_classification(n_samples=100000, n_features=50, n_classes=2, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from knn_recommender import KNNRecommender\n",
+    "from qtfrecommender import KNNRecommender\n",
     "import pandas as pd\n",
     "\n",
     "# When a KNNRecommender model is instantiated, it automatically loads\n",
@@ -97,14 +85,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from regression_recommender import RegressionRecommender\n",
+    "from qtfrecommender import RegressionRecommender\n",
     "\n",
-    "recommender = RegressionRecommender(supervised=True, _load=False)\n",
+    "recommender = RegressionRecommender(supervised=True, load_default=False)\n",
     "\n",
     "recommender.fit(full_set_path=\"./data/full_set/\", train_set_path=\"./data/train_set/\", test_set_path=\"./data/test_set/\")\n",
     "# recommender.fit(full_set_path=\"./data/train_set/\", train_set_path=\"./data/train_set/\", test_set_path=\"./data/test_set/\")\n",
-    "recommender.save_meta_table(\"./recommender_data/regression_meta_table.h5\")\n",
-    "recommender.persist_model(\"./recommender_data/RegressionRecommender.joblib\")"
+    "recommender.save_meta_table(\"./qtfrecommender/methods/data/regression_meta_table.h5\")\n",
+    "recommender.persist_model(\"./qtfrecommender/methods/data/RegressionRecommender.joblib\")"
    ]
   },
   {
@@ -120,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from regression_recommender import RegressionRecommender\n",
+    "from qtfrecommender import RegressionRecommender\n",
     "import pandas as pd\n",
     "\n",
     "# When a RegressionRecommender model is instantiated, it automatically loads\n",
@@ -165,75 +153,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from regression_recommender import RegressionRecommender\n",
-    "# from ensemble_quantifier import EnsembleQuantifier\n",
-    "# from sklearn.model_selection import train_test_split\n",
-    "# import pandas as pd\n",
-    "# import numpy as np\n",
+    "from qtfrecommender import RegressionRecommender\n",
+    "from ensemble_quantifier import EnsembleQuantifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
-    "# # Let's load a dataset\n",
-    "# df = pd.read_csv(\"./data/datasets/winetype.csv\")\n",
-    "# X = df.drop(columns=[\"class\"]).values\n",
-    "# y = df[\"class\"].values\n",
+    "# Let's load a dataset\n",
+    "df = pd.read_csv(\"./data/datasets/winetype.csv\")\n",
+    "X = df.drop(columns=[\"class\"]).values\n",
+    "y = df[\"class\"].values\n",
     "\n",
-    "# # Instantiate a RegressionRecommender model\n",
-    "# recommender = RegressionRecommender()\n",
+    "# Instantiate a RegressionRecommender model\n",
+    "recommender = RegressionRecommender()\n",
     "\n",
-    "# # We can use the recommender to get a ranking of quantifiers\n",
-    "# ranking, weights = recommender.recommend(X, y)\n",
+    "# We can use the recommender to get a ranking of quantifiers\n",
+    "ranking, weights = recommender.recommend(X, y)\n",
     "\n",
-    "# # Let's instantiate an EnsembleQuantifier model\n",
-    "# # and pass the ranking and the Top-k quantifiers to it.\n",
-    "# # With k = 3, for example.\n",
-    "# # Now, when we need to get predictions, an ensemble of the Top-3 will be used.\n",
-    "# ensemble_qtf = EnsembleQuantifier(ranking=ranking)\n",
+    "# Let's instantiate an EnsembleQuantifier model\n",
+    "# and pass the ranking and the Top-k quantifiers to it.\n",
+    "# With k = 3, for example.\n",
+    "# Now, when we need to get predictions, an ensemble of the Top-3 will be used.\n",
+    "ensemble_qtf = EnsembleQuantifier(ranking=ranking)\n",
     "\n",
-    "# # Split the data into train and test sets\n",
-    "# X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "# Split the data into train and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
     "\n",
-    "# # Fit the ensemble model\n",
-    "# ensemble_qtf.fit(X_train, y_train)\n",
+    "# Fit the ensemble model\n",
+    "ensemble_qtf.fit(X_train, y_train)\n",
     "\n",
-    "# # Predict the positive prevalence of the test set\n",
-    "# pred_prev = ensemble_qtf.predict(X_test)\n",
+    "# Predict the positive prevalence of the test set\n",
+    "pred_prev = ensemble_qtf.predict(X_test)\n",
     "\n",
-    "# # Compare the prediction with the truth\n",
-    "# true_prev = np.sum(y_test) / len(y_test)\n",
+    "# Compare the prediction with the truth\n",
+    "true_prev = np.sum(y_test) / len(y_test)\n",
     "\n",
-    "# print(f\"{ensemble_qtf}\")\n",
-    "# print(f\"True prevalence: {true_prev}\")\n",
-    "# print(f\"Predicted prevalence: {pred_prev}\")\n",
+    "print(f\"{ensemble_qtf}\")\n",
+    "print(f\"True prevalence: {true_prev}\")\n",
+    "print(f\"Predicted prevalence: {pred_prev}\")\n",
     "\n",
-    "# # We can change the method of the EnsembleQuantifier.\n",
-    "# # Avaliable methods are the following:\n",
-    "# # - \"median\": returns the median of the predictions\n",
-    "# # - \"weighted\": returns the weighted average of the predictions\n",
-    "# #\n",
-    "# # Default is \"median\".\n",
+    "# We can change the method of the EnsembleQuantifier.\n",
+    "# Avaliable methods are the following:\n",
+    "# - \"median\": returns the median of the predictions\n",
+    "# - \"weighted\": returns the weighted average of the predictions\n",
+    "#\n",
+    "# Default is \"median\".\n",
     "\n",
-    "# # Let's use the weighted method and pass the weights to the ensemble model.\n",
-    "# ensemble_qtf.method = \"weighted\"\n",
-    "# ensemble_qtf.weights = weights\n",
+    "# Let's use the weighted method and pass the weights to the ensemble model.\n",
+    "ensemble_qtf.method = \"weighted\"\n",
+    "ensemble_qtf.weights = weights\n",
     "\n",
-    "# # Model is already fitted, so we can predict again\n",
-    "# pred_prev = ensemble_qtf.predict(X_test)\n",
+    "# Model is already fitted, so we can predict again\n",
+    "pred_prev = ensemble_qtf.predict(X_test)\n",
     "\n",
-    "# print(f\"\\n{ensemble_qtf}\")\n",
-    "# print(f\"True prevalence: {true_prev}\")\n",
-    "# print(f\"Predicted prevalence: {pred_prev}\")\n",
+    "print(f\"\\n{ensemble_qtf}\")\n",
+    "print(f\"True prevalence: {true_prev}\")\n",
+    "print(f\"Predicted prevalence: {pred_prev}\")\n",
     "\n",
-    "# # We can also recommend the top- with k = 3 and pass it to the ensemble model.\n",
-    "# ranking, weights = recommender.recommend(X, y, k=3)\n",
+    "# We can also recommend the top- with k = 3 and pass it to the ensemble model.\n",
+    "ranking, weights = recommender.recommend(X, y, k=3)\n",
     "\n",
-    "# ensemble_qtf.ranking = ranking\n",
-    "# ensemble_qtf.weights = weights\n",
+    "ensemble_qtf.ranking = ranking\n",
+    "ensemble_qtf.weights = weights\n",
     "\n",
-    "# # Model is fitted, so we can just predict\n",
-    "# pred_prev = ensemble_qtf.predict(X_test)\n",
+    "# Model is fitted, so we can just predict\n",
+    "pred_prev = ensemble_qtf.predict(X_test)\n",
     "\n",
-    "# print(f\"\\n{ensemble_qtf}\")\n",
-    "# print(f\"True prevalence: {true_prev}\")\n",
-    "# print(f\"Predicted prevalence: {pred_prev}\")"
+    "print(f\"\\n{ensemble_qtf}\")\n",
+    "print(f\"True prevalence: {true_prev}\")\n",
+    "print(f\"Predicted prevalence: {pred_prev}\")"
    ]
   },
   {
@@ -252,11 +240,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from regression_recommender import RegressionRecommender\n",
+    "from qtfrecommender import RegressionRecommender\n",
     "\n",
     "# There is a built-in method to evaluate the RegressionRecommender\n",
     "# using the leave-one-out strategy. It excludes one instance from the\n",
@@ -264,6 +252,7 @@
     "# it predicts the ranking of the excluded instance and appends the\n",
     "# predicted ranking alongside the true ranking to the recommender evaluation table.\n",
     "recommender = RegressionRecommender()\n",
+    "recommender.load_model()\n",
     "reg_recommender_eval, reg_quantifiers_eval = recommender.leave_one_out_evaluation(\"./plot_data/reg_recommender_evaluation_table.csv\",\n",
     "                                                                                  \"./plot_data/reg_quantifiers_evaluation_table.csv\")"
    ]
@@ -277,11 +266,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from knn_recommender import KNNRecommender\n",
+    "from qtfrecommender import KNNRecommender\n",
     "\n",
     "# There is a built-in method to evaluate the KNNRecommender\n",
     "# using the leave-one-out strategy. It excludes one instance from the\n",
@@ -289,6 +278,7 @@
     "# it predicts the ranking of the excluded instance and appends the\n",
     "# predicted ranking alongside the true ranking to the recommender evaluation table.\n",
     "recommender = KNNRecommender()\n",
+    "recommender.load_model()\n",
     "knn_recommender_eval, knn_quantifiers_eval = recommender.leave_one_out_evaluation(\"./plot_data/knn_recommender_evaluation_table.csv\",\n",
     "                                                                                  \"./plot_data/knn_quantifiers_evaluation_table.csv\")"
    ]
@@ -304,9 +294,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>quantifier</th>\n",
+       "      <th>dataset</th>\n",
+       "      <th>sample_size</th>\n",
+       "      <th>sampling_seed</th>\n",
+       "      <th>iteration</th>\n",
+       "      <th>alpha</th>\n",
+       "      <th>pred_prev</th>\n",
+       "      <th>abs_error</th>\n",
+       "      <th>run_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(KNN)Top-1</td>\n",
+       "      <td>1043_ada_agnostic</td>\n",
+       "      <td>100</td>\n",
+       "      <td>623</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(KNN)Top-1</td>\n",
+       "      <td>1043_ada_agnostic</td>\n",
+       "      <td>100</td>\n",
+       "      <td>243</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.060000</td>\n",
+       "      <td>0.060000</td>\n",
+       "      <td>0.000278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(KNN)Top-1</td>\n",
+       "      <td>1043_ada_agnostic</td>\n",
+       "      <td>100</td>\n",
+       "      <td>18</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.060000</td>\n",
+       "      <td>0.060000</td>\n",
+       "      <td>0.000257</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(KNN)Top-1</td>\n",
+       "      <td>1043_ada_agnostic</td>\n",
+       "      <td>100</td>\n",
+       "      <td>549</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.020000</td>\n",
+       "      <td>0.020000</td>\n",
+       "      <td>0.000272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(KNN)Top-1</td>\n",
+       "      <td>1043_ada_agnostic</td>\n",
+       "      <td>100</td>\n",
+       "      <td>447</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000280</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26395</th>\n",
+       "      <td>(KNN)Top-9+W</td>\n",
+       "      <td>1479_hill-valley</td>\n",
+       "      <td>100</td>\n",
+       "      <td>554</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.896931</td>\n",
+       "      <td>0.103069</td>\n",
+       "      <td>0.327147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26396</th>\n",
+       "      <td>(KNN)Top-9+W</td>\n",
+       "      <td>1479_hill-valley</td>\n",
+       "      <td>100</td>\n",
+       "      <td>379</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.897966</td>\n",
+       "      <td>0.102034</td>\n",
+       "      <td>0.331295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26397</th>\n",
+       "      <td>(KNN)Top-9+W</td>\n",
+       "      <td>1479_hill-valley</td>\n",
+       "      <td>100</td>\n",
+       "      <td>348</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.879302</td>\n",
+       "      <td>0.120698</td>\n",
+       "      <td>0.330035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26398</th>\n",
+       "      <td>(KNN)Top-9+W</td>\n",
+       "      <td>1479_hill-valley</td>\n",
+       "      <td>100</td>\n",
+       "      <td>840</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.890648</td>\n",
+       "      <td>0.109352</td>\n",
+       "      <td>0.327178</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26399</th>\n",
+       "      <td>(KNN)Top-9+W</td>\n",
+       "      <td>1479_hill-valley</td>\n",
+       "      <td>100</td>\n",
+       "      <td>114</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.887599</td>\n",
+       "      <td>0.112401</td>\n",
+       "      <td>0.328550</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>26400 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         quantifier            dataset  sample_size  sampling_seed  iteration  \\\n",
+       "0        (KNN)Top-1  1043_ada_agnostic          100            623          1   \n",
+       "1        (KNN)Top-1  1043_ada_agnostic          100            243          2   \n",
+       "2        (KNN)Top-1  1043_ada_agnostic          100             18          3   \n",
+       "3        (KNN)Top-1  1043_ada_agnostic          100            549          4   \n",
+       "4        (KNN)Top-1  1043_ada_agnostic          100            447          5   \n",
+       "...             ...                ...          ...            ...        ...   \n",
+       "26395  (KNN)Top-9+W   1479_hill-valley          100            554          6   \n",
+       "26396  (KNN)Top-9+W   1479_hill-valley          100            379          7   \n",
+       "26397  (KNN)Top-9+W   1479_hill-valley          100            348          8   \n",
+       "26398  (KNN)Top-9+W   1479_hill-valley          100            840          9   \n",
+       "26399  (KNN)Top-9+W   1479_hill-valley          100            114         10   \n",
+       "\n",
+       "       alpha  pred_prev  abs_error  run_time  \n",
+       "0        0.0   0.000000   0.000000  0.000309  \n",
+       "1        0.0   0.060000   0.060000  0.000278  \n",
+       "2        0.0   0.060000   0.060000  0.000257  \n",
+       "3        0.0   0.020000   0.020000  0.000272  \n",
+       "4        0.0   0.000000   0.000000  0.000280  \n",
+       "...      ...        ...        ...       ...  \n",
+       "26395    1.0   0.896931   0.103069  0.327147  \n",
+       "26396    1.0   0.897966   0.102034  0.331295  \n",
+       "26397    1.0   0.879302   0.120698  0.330035  \n",
+       "26398    1.0   0.890648   0.109352  0.327178  \n",
+       "26399    1.0   0.887599   0.112401  0.328550  \n",
+       "\n",
+       "[26400 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from ensemble_quantifier import EnsembleQuantifier\n",
     "\n",
